@@ -1,3 +1,7 @@
+2007-05-13  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in: Add gstreamer modules.
+
 2007-05-11  Claude Paroz  <claude@2xlibre.net>
 
 	* teams.py: Sort release list on language team page.
